<resources>
    <string name="app_name">My Reward</string>
    <string name="action_settings">Settings</string>

    <string name="execute">執行</string>
    <string name="edit">編輯</string>
    <string name="cancel">取消</string>

    <string name="right_now_point">目前分數</string>

    <string name="done">完成</string>
    <string name="targetList">好習慣</string>
    <string name="frontPage">首頁</string>
    <string name="badtargetList">壞習慣</string>
    <string name="reward">獎勵</string>
    <string name="log">記錄</string>

    <string name="add_goodTarget">新增好習慣</string>
    <string name="add_badTarget">新增壞習慣</string>
    <string name="add_reward">新增獎勵</string>

    <string name="add_todo_task">新增待辦事項</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="facebook_app_id">1701962650066716</string>

    <string name="write_external_storage_denied">沒有寫入外部儲存設備授權</string>
    <string name="add_todo_edittext_hint">請輸入待辦事項 ex:買牛奶、倒垃圾...</string>
    <string name="add_goodtarget_edittext_hint">請輸入想養成的好習慣 ex:跑步、看書...</string>
    <string name="add_badtarget_edittext_hint">請輸入想改掉的壞習慣 ex:賴床、消夜...</string>
    <string name="add_reward_edittext_hint">請輸入給自己的獎勵 ex:旅遊、吃大餐...</string>


</resources>
